Add favicon and astro-icon

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,7 @@ import "../styles/base.css";
     <title>Joshua Burer</title>
     <meta name="description" content="Joshua Burer's Astro Site" />
     <meta name="theme-color" content="var(--background)" />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
   </head>
   <body>
     <Header />
