--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -92,3 +92,10 @@ hr {
   border-radius: 0.125rem;
   background-image: linear-gradient(90deg, var(--primary), var(--secondary));
 }
+
+p [astro-icon] {
+  display: inline;
+  height: 1.2em;
+  position: relative;
+  top: 0.3em;
+}
