--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import "../styles/base.css";
 ---
@@ -17,5 +18,6 @@ import "../styles/base.css";
     <main>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
