--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,11 @@ import profile from "../images/profile.jpg";
     <Image src={profile} alt="profile" width="500" format="webp" />
   </div>
   <hr />
-  <p style="font-style:italic">Hey there! 👋</p>
+  <p class="italic center">Hey there! 👋</p>
   <p>
-    I'm Joshua Burer. Based in Atlanta, GA, I'm a full-time web developer, and
-    I'm a student currently pursuing a Bachelors in Computer Science at Georgia
-    Tech.
+    I'm Josh. I'm a full-time web developer and student based in Atlanta, GA.
+    Currently pursuing a Bachelors in Computer Science at Georgia Tech!
   </p>
-  <p>I love games, guitar, programming,</p>
 </Layout>
 
 <style>
