--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,6 +1,7 @@
 ---
+import type { MarkdownInstance } from "astro";
 import CardListingLayout from "../layouts/CardListingLayout.astro";
-const portfolioItems = await Astro.glob('./portfolio/*.md')
+const portfolioItems: MarkdownInstance<Record<string, any>>[] = await Astro.glob('./portfolio/*.md*')
 ---
 
 <CardListingLayout title="Portfolio" glob={portfolioItems}/>
