Alias layouts and components

--- a/src/layouts/CardListingLayout.astro
+++ b/src/layouts/CardListingLayout.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import CardItem from "../components/CardItem.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import CardItem from "@components/CardItem.astro";
 import type { MarkdownInstance } from "astro";
 
 interface Props {
