--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownInstance } from "astro";
-import CardListingLayout from "../layouts/CardListingLayout.astro";
+import CardListingLayout from "@layouts/CardListingLayout.astro";
 const portfolioItems: MarkdownInstance<Record<string, any>>[] = await Astro.glob('./portfolio/*.md*')
 ---
 
