--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,13 +2,17 @@
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import "../styles/base.css";
+let { title, frontmatter } = Astro.props;
+if (frontmatter?.title) {
+  title = frontmatter?.title;
+}
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Joshua Burer</title>
+    <title>{title}{title ? " - " : ""}Joshua Burer</title>
     <meta name="description" content="Joshua Burer's Astro Site" />
     <meta name="theme-color" content="var(--background)" />
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
