--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@ import { Icon } from "astro-icon";
 <style>
   footer {
     position: absolute;
-    bottom: 0;
+    bottom: 5rem;
     width: 100%;
     padding-bottom: 1rem;
   }
