Add meta description, handling for empty globs

--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -20,11 +20,13 @@ const { title, description, link, image, date } = Astro.props;
     display: block;
     padding: 1rem;
     text-decoration: none;
-    transition: transform ease 0.3s;
-    will-change: transform;
+    transition: transform ease 0.3s, outline ease 0.3s;
+    outline: 0 solid var(--secondary);
+    will-change: transform, outline;
   }
   a:hover {
     transform: scale(1.05);
+    outline: 0.3rem solid var(--secondary);
   }
 
   h2 {
