--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,12 @@
 ---
 import type { MarkdownInstance } from "astro";
 import CardListingLayout from "@layouts/CardListingLayout.astro";
-const blogPosts: MarkdownInstance<Record<string, any>>[] = await Astro.glob("./blog/*.md*");
+let blogPosts: MarkdownInstance<Record<string, any>>[];
+try {
+  blogPosts = await Astro.glob("./blog/*.md*");
+} catch {
+  blogPosts = [];
+}
 ---
 
 <CardListingLayout title="Blog" glob={blogPosts} />
