--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,9 +2,13 @@
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import "../styles/base.css";
-let { title, frontmatter } = Astro.props;
+let { title, description, frontmatter } = Astro.props;
+
 if (frontmatter?.title) {
-  title = frontmatter?.title;
+  title = frontmatter.title;
+}
+if (frontmatter?.description) {
+  description = frontmatter.description;
 }
 ---
 
@@ -13,7 +17,7 @@ if (frontmatter?.title) {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{title}{title ? " - " : ""}Joshua Burer</title>
-    <meta name="description" content="Joshua Burer's Astro Site" />
+    <meta name="description" content={description} />
     <meta name="theme-color" content="var(--background)" />
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
   </head>
