--- a/src/layouts/PortfolioLayout.astro
+++ b/src/layouts/PortfolioLayout.astro
@@ -1,10 +1,10 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
 const base = import.meta.env.BASE_URL;
-const { title } = Astro.props;
+const { title, description } = Astro.props.frontmatter;
 ---
 
-<BaseLayout title={title}>
+<BaseLayout title={title} description={description}>
   <a href={`${base}portfolio`}>« Go back</a>
   <slot />
 </BaseLayout>
