--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,7 +1,12 @@
 ---
 import type { MarkdownInstance } from "astro";
 import CardListingLayout from "@layouts/CardListingLayout.astro";
-const portfolioItems: MarkdownInstance<Record<string, any>>[] = await Astro.glob('./portfolio/*.md*')
+let portfolioItems: MarkdownInstance<Record<string, any>>[];
+try {
+  portfolioItems = await Astro.glob("./portfolio/*.md*");
+} catch {
+  portfolioItems = [];
+}
 ---
 
-<CardListingLayout title="Portfolio" glob={portfolioItems}/>
+<CardListingLayout title="Portfolio" glob={portfolioItems} />
