Eager load profile image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,13 @@ import profile from "../images/profile.jpg";
 >
   <h1 class="gradient-text">Joshua Burer</h1>
   <div class="profile-image-container">
-    <Image src={profile} alt="profile" width="500" format="webp" />
+    <Image
+      src={profile}
+      alt="profile"
+      width="500"
+      format="webp"
+      loading="eager"
+    />
   </div>
   <hr />
   <p class="italic center">Hey there! 👋</p>
