--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ interface URLButtons {
 }
 const right: URLButtons = {
   about: "About",
-  blog: "Blog",
+  // blog: "Blog",
   // portfolio: "Portfolio",
 };
 ---
