--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import profile from "../images/profile.jpg";
     />
   </div>
   <hr />
-  <p class="italic center">Hey there! 👋</p>
+  <p class="italic center">Hey! 👋</p>
   <p>
     I'm Josh. I'm a full-time web developer and student based in Atlanta, GA.
     Currently pursuing a Bachelors in Computer Science at Georgia Tech!
