--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 const { title, description, link, image, date } = Astro.props;
 ---
 
