--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@layouts/BaseLayout.astro";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import profile from "../images/profile.jpg";
 ---
 
