Wording changes, add 3 portfolio entries

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ interface URLButtons {
 const right: URLButtons = {
   about: "About",
   // blog: "Blog",
-  // portfolio: "Portfolio",
+  portfolio: "Portfolio",
 };
 ---
 
