--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -9,4 +9,4 @@ try {
 }
 ---
 
-<CardListingLayout title="Portfolio" glob={portfolioItems} />
+<CardListingLayout title="Portfolio & Experience" glob={portfolioItems} />
