--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -4,7 +4,7 @@ const { title, description, link, image, date } = Astro.props;
 ---
 
 <a href={link}>
-  {image && <Image src={image} height="100px" alt={description} />}
+  {image && <Image src={image} height="100" alt={description} />}
   <div class="title-container">
     <h2>{title}</h2>
     <div class="title-underline"></div>
@@ -42,7 +42,7 @@ const { title, description, link, image, date } = Astro.props;
     bottom: -0.5rem;
     height: 0.25rem;
     position: absolute;
-    transition: width cubic-bezier(0.6, 0, 0.4, 1) 1s;
+    transition: width ease-in-out 1s;
     width: 3rem;
   }
 
