--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import profile from "../images/profile.jpg";
 ---
 
 <Layout
-  description="I'm Josh. I'm a full-time web developer and student based in Atlanta, GA. Currently pursuing a Bachelors in Computer Science at Georgia Tech!"
+  description="I'm Josh. I'm a web developer based in Atlanta, GA. Recently completed a Bachelor's in Computer Science at Georgia Tech!"
 >
   <h1 class="gradient-text">Joshua Burer</h1>
   <div class="profile-image-container">
@@ -19,8 +19,8 @@ import profile from "../images/profile.jpg";
   </div>
   <hr />
   <p class="center">
-    I'm a full-time web developer and student based in Atlanta, GA.
-    Currently pursuing a Bachelors in Computer Science at Georgia Tech!
+    I'm a web developer based in Atlanta, GA.
+    Recently completed a Bachelor's in Computer Science at Georgia Tech!
   </p>
 </Layout>
 
