--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ interface URLButtons {
 const right: URLButtons = {
   about: "About",
   // blog: "Blog",
-  portfolio: "Portfolio",
+  // portfolio: "Portfolio",
 };
 ---
 
@@ -78,6 +78,7 @@ const right: URLButtons = {
     transition: transform ease 0.3s, background-color ease 0.3s,
       box-shadow ease 0.3s;
     box-shadow: 0 0 0 0 var(--secondary);
+    font-family: var(--monospace);
   }
 
   a:hover {
