Fix footer icons

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,6 +49,7 @@ import { Icon } from "astro-icon/components";
     transition: transform ease 0.5s;
     width: 7rem;
     font-family: var(--monospace);
+    gap: 0.5ch;
   }
   a:hover {
     transform: scale(1.05);
